// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GiftCardTileVanilla should render gift card tile 1`] = `
<div
  className="test"
>
  <div
    className="gift_card_box elem-mb-XS elem-mt-MED"
  >
    <Styled(Row)>
      <Styled(Col)
        colSize={
          Object {
            "large": 9,
            "medium": 5,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          className="gift_card_number_detail"
          color="text.secondary"
          component="p"
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        >
          lbl_giftcard_endingIn  
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 3,
            "medium": 3,
            "small": 3,
          }
        }
      >
        <Styled(Button)
          buttonVariation="variable-width"
          className="gift_apply_button"
          data-locator="gift_apply_button"
          disabled={true}
          fullWidth="true"
          onClick={[Function]}
          type="submit"
        >
          lbl_giftcard_applyBtn
        </Styled(Button)>
      </Styled(Col)>
    </Styled(Row)>
  </div>
</div>
`;

exports[`GiftCardTileVanilla should render gift card tile with 0 order balance 1`] = `
<div
  className="test"
>
  <div
    className="gift_card_box elem-mb-XS elem-mt-MED"
  >
    <Styled(Row)>
      <Styled(Col)
        colSize={
          Object {
            "large": 9,
            "medium": 5,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          className="gift_card_number_detail"
          color="text.secondary"
          component="p"
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        >
          lbl_giftcard_endingIn  
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 3,
            "medium": 3,
            "small": 3,
          }
        }
      >
        <Styled(Button)
          buttonVariation="variable-width"
          className="gift_apply_button"
          data-locator="gift_apply_button"
          disabled={true}
          fullWidth="true"
          onClick={[Function]}
          type="submit"
        >
          lbl_giftcard_applyBtn
        </Styled(Button)>
      </Styled(Col)>
    </Styled(Row)>
  </div>
</div>
`;

exports[`GiftCardTileVanilla should render gift card tile with 100 order balance 1`] = `
<div
  className="test"
>
  <div
    className="gift_card_box elem-mb-XS elem-mt-MED"
  >
    <Styled(Row)>
      <Styled(Col)
        colSize={
          Object {
            "large": 9,
            "medium": 5,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          className="gift_card_number_detail"
          color="text.secondary"
          component="p"
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        >
          lbl_giftcard_endingIn  
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 3,
            "medium": 3,
            "small": 3,
          }
        }
      >
        <Styled(Button)
          buttonVariation="variable-width"
          className="gift_apply_button"
          data-locator="gift_apply_button"
          disabled={false}
          fullWidth="true"
          onClick={[Function]}
          type="submit"
        >
          lbl_giftcard_applyBtn
        </Styled(Button)>
      </Styled(Col)>
    </Styled(Row)>
  </div>
</div>
`;

exports[`GiftCardTileVanilla should render gift card tile with errors 1`] = `
<div
  className="test"
>
  <div
    className="gift_card_box elem-mb-XS elem-mt-MED"
  >
    <Styled(Row)>
      <Styled(Col)
        colSize={
          Object {
            "large": 9,
            "medium": 5,
            "small": 3,
          }
        }
      >
        <Styled(ErrorMessage)
          className="error_box"
          error="some error message"
        />
      </Styled(Col)>
    </Styled(Row)>
    <Styled(Row)>
      <Styled(Col)
        colSize={
          Object {
            "large": 9,
            "medium": 5,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          className="gift_card_number_detail"
          color="text.secondary"
          component="p"
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        >
          lbl_giftcard_endingIn  
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 3,
            "medium": 3,
            "small": 3,
          }
        }
      >
        <Styled(Button)
          buttonVariation="variable-width"
          className="gift_apply_button"
          data-locator="gift_apply_button"
          disabled={true}
          fullWidth="true"
          onClick={[Function]}
          type="submit"
        >
          lbl_giftcard_applyBtn
        </Styled(Button)>
      </Styled(Col)>
    </Styled(Row)>
  </div>
</div>
`;

exports[`GiftCardTileVanilla should render gift card tile with isGiftCardApplied 1`] = `
<div
  className="test"
>
  <div
    className="gift_card_box elem-mb-XS elem-mt-MED"
  >
    <Styled(Row)>
      <Styled(Col)
        colSize={
          Object {
            "large": 9,
            "medium": 5,
            "small": 3,
          }
        }
      >
        <Styled(BodyCopy)
          className="gift_card_number_detail"
          color="text.secondary"
          component="p"
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        >
          lbl_giftcard_endingIn undefined  | lbl_giftcard_remainingBal : undefined
        </Styled(BodyCopy)>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 3,
            "medium": 3,
            "small": 3,
          }
        }
      >
        <Styled(Button)
          buttonVariation="variable-width"
          className="gift_remove_button"
          data-locator="gift_apply_button"
          disabled={false}
          fullWidth="true"
          onClick={[Function]}
          type="submit"
        >
          lbl_giftcard_removeBtn
        </Styled(Button)>
      </Styled(Col)>
    </Styled(Row)>
  </div>
</div>
`;
